testimonials section and make resposnive the home page

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swipe": "^1.7.7",
+    "swiper": "^9.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
