Added to the toast

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.11.0",
+    "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0",
     "swipe": "^1.7.7",
     "swiper": "^9.2.4"
