--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@smastrom/react-rating": "^1.3.1",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
@@ -18,6 +19,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.11.0",
     "react-toastify": "^9.1.2",
