--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.11.0",
     "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0",
