--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@heroicons/react": "^2.0.17",
     "@smastrom/react-rating": "^1.3.1",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
