--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@heroicons/react": "^2.0.17",
     "@smastrom/react-rating": "^1.3.1",
+    "@tippyjs/react": "^4.2.6",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
     "localforage": "^1.10.0",
